Repoint arduino to chuckb repo

--- a/library.properties
+++ b/library.properties
@@ -1,11 +1,11 @@
 name=mcurses
-version=0.1
+version=0.1.1
 author=ChrisMicro
-maintainer=ChrisMicro 
+maintainer=chuckb
 sentence=minimal ncurses
 paragraph=mcurses is a minimal version of ncurses which gives GUI like interfaces to a text terminal. 
 category=Display
-url=https://github.com/ChrisMicro/mcurses
+url=https://github.com/chuckb/mcurses
 architectures=*
 
 
